kubernetes/deployment.stag.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${K8S_APP_NAME_STAG}-deployment
  labels:
    app: ${K8S_APP_NAME_STAG}
spec:
  selector:
    matchLabels:
      app: ${K8S_APP_NAME_STAG}
  replicas: 1
  template:
    metadata:
      labels:
        app: ${K8S_APP_NAME_STAG}
    spec:
      containers:
        - name: ${K8S_APP_NAME_STAG}
          image: ${CI_DOCKER_LATEST_STAG}
          imagePullPolicy: Always
          ports:
            - containerPort: ${K8S_CONTAINER_PORT_STAG}
          resources: {_STAG}
          volumeMounts:
            - mountPath: /app/storage
              name: otonometer-webcore-storage-stag
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      volumes:
        - name: otonometer-webcore-storage-stag
          persistentVolumeClaim:
            claimName: otonometer-webcore-storage-stag

---
apiVersion: v1
kind: Service
metadata:
  name: ${K8S_APP_NAME_STAG}
  labels:
    app: ${K8S_APP_NAME_STAG}
spec:
  ports:
    - name: http
      port: ${K8S_SERVICE_PORT_STAG}
      targetPort: ${K8S_CONTAINER_PORT_STAG}
  selector:
    app: ${K8S_APP_NAME_STAG}

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: ${K8S_APP_NAME_STAG}
spec:
  rules:
    - host: ${K8S_APP_DOMAIN_STAG}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${K8S_APP_NAME_STAG}
                port:
                  number: ${K8S_SERVICE_PORT_STAG}
  tls:
    - hosts:
        - ${K8S_APP_DOMAIN_STAG}
      secretName: ${K8S_TLS_SECRET_STAG}
